Theme: More fixes for image spacing.

--- a/web/themes/custom/breema2/css/styles.css
+++ b/web/themes/custom/breema2/css/styles.css
@@ -286,6 +286,7 @@ a.teaser-link .node--view-mode-teaser-with-location .field--name-field-location 
   margin: 0 0 1em 0;
 }
 
+a.teaser-link .field--name-field-main-image.field--type-entity-reference,
 .field--name-field-main-image.field--type-entity-reference,
 .field--name-field-main-image.field--type-image {
   display: block;
@@ -300,6 +301,7 @@ a.teaser-link .node--view-mode-teaser-with-location .field--name-field-location 
     max-width: 50%;
   }
 
+  a.teaser-link .field--name-field-main-image.field--type-entity-reference,
   .field--name-field-main-image.field--type-entity-reference,
   .field--name-field-main-image.field--type-image {
     margin: 0 1em 0 0;
